# houston-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
houston/: __init__.py  __main__.py  client.py  commands.py  exceptions.py  interface.py  mission.py  plan.py  service.py
houston/gcp/: __init__.py  client.py  cloud_function.py  cloud_storage.py  secret_manager.py
houston/plugin/: azure.py  gcp.py
tests/: __init__.py  test_azure.py  test_gcp.py  test_houston.py
